update prcatice project with bruno